# ScreenCreator

./: CMakeLists.txt  README.md  build_and_run.py  main.cpp
interfaces/: IScreen.h
screens/: LEDWallScreen.cpp  LEDWallScreen.h  TVScreen.cpp  TVScreen.h  TVScreen.h.gch
screens/led_wall/: ConfigurationStrategy.cpp  ConfigurationStrategy.h  LEDWallScreen.cpp  LEDWallScreen.h
screens/tv_screen/: TVScreen.h
